@@ -7,9 +7,14 @@
     Manual */
 /** \page contributors Contributors
 
+(in alphabetical order)
+
+Michel Loiseleur
+- Fixed memory leaks in transaction routines of all backends.
+
 Eric McDonald
-- Wrote better tests for backend databases to configure.ac. 
-- Wrote versioning and packaging improvements.
+- Renoved autotools related files.
+- Wrote a lot of versioning and packaging improvements.
 
 Axel Schmidt 
 - Made LiteSQL compile with VC++ (fixed some related bugs).
